Fix package name

--- a/environment.yml
+++ b/environment.yml
@@ -3,4 +3,4 @@ dependencies:
 - python=3.6.*
 - pip:
   - --process-dependency-links
-  - git+https://github.com/ceddlyburge/python_hello_world#egg=python_hello_world
+  - git+https://github.com/ceddlyburge/python_hello_world#egg=python_hello
